test/bad/double_declaration_04.mpp
var foo:int;
data foo = #FOO;
